[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliqueue"
version = "0.1.0"
description = "Production-minded PostgreSQL-backed async job queue"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "asyncpg>=0.30.0",
  "pydantic>=2.9.0",
  "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: integration tests requiring PostgreSQL",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reliqueue = ["schema.sql"]
